--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Indronil's Profile</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to</h1>
+    <section >
+        
+        
+    <div class="half-width">
+        <h1>Welcome to</h1>
     <h1> <span id="name"> Indronil's </span> World</h1>
+    <h3>World class professional Web-Dev</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem voluptates laudantium optio eligendi atque saepe quia exercitationem id. Maxime magni sint atque sequi fuga, blanditiis necessitatibus esse nobis, ut quam nisi commodi consequatur omnis tempore rerum optio tenetur delectus aut doloribus iusto quisquam recusandae architecto nostrum natus! Rem, quas quia?</p>
+    </div>
+    <div class="half-width">
+        <img src="img/image 10.png" alt="">
+    </div>
+    </section>
 </body>
 </html>
