--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section >
-        
-        
+    <section class="top-banner" >            
     <div class="half-width">
         <h1>Welcome to</h1>
     <h1> <span id="name"> Indronil's </span> World</h1>
     <h3>World class professional Web-Dev</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem voluptates laudantium optio eligendi atque saepe quia exercitationem id. Maxime magni sint atque sequi fuga, blanditiis necessitatibus esse nobis, ut quam nisi commodi consequatur omnis tempore rerum optio tenetur delectus aut doloribus iusto quisquam recusandae architecto nostrum natus! Rem, quas quia?</p>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/neal.vr.9/">Hire me</a>
     </div>
     <div class="half-width">
         <img src="img/image 10.png" alt="">
