--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <section class="top-banner" >            
     <div class="half-width">
-        <h1>Welcome to</h1>
-    <h1> <span id="name"> Indronil's </span> World</h1>
+    <h1>Welcome to</h1>
+    <h1> <span id="Orange-color"> Indronil's </span> World</h1>
     <h3>World class professional Web-Dev</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem voluptates laudantium optio eligendi atque saepe quia exercitationem id. Maxime magni sint atque sequi fuga, blanditiis necessitatibus esse nobis, ut quam nisi commodi consequatur omnis tempore rerum optio tenetur delectus aut doloribus iusto quisquam recusandae architecto nostrum natus! Rem, quas quia?</p>
     <a class="link-button" target="_blank" href="https://www.facebook.com/neal.vr.9/">Hire me</a>
@@ -21,5 +21,34 @@
         <img src="img/image 10.png" alt="">
     </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="img/image 11.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3> Became a Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem voluptates laudantium optio eligendi atque saepe quia exercitationem id. </p>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/neal.vr.9/">Where to find me</a>
+
+        </div>
+    </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div id="Full-Stack" class="half-width exp">
+            <h2>Full Stack Web Developer</h2>
+            <h3 id="Orange-color">2021-Present | Pro Level Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cumque, perspiciatis nesciunt quis voluptatibus quo dolor, enim nostrum dolores beatae, accusamus facere ab placeat! Nihil molestias sint nemo iusto possimus perferendis, dolore esse similique a neque fugit odit quod, tempora sed. Porro saepe accusamus consectetur consequatur dolores assumenda, labore voluptatem deserunt ex, autem, non qui unde? Ut hic quo deleniti?</p>
+        </div>
+        <div id="Baby-Web" class="half-width exp">
+            <h2>Baby Web Developer</h2>
+            <h3 id="Orange-color">2020-2021 | Programming Hero Learner</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cumque, perspiciatis nesciunt quis voluptatibus quo dolor, enim nostrum dolores beatae, accusamus facere ab placeat! Nihil molestias sint nemo iusto possimus perferendis, dolore esse similique a neque fugit odit quod, tempora sed. Porro saepe accusamus consectetur consequatur dolores assumenda, labore voluptatem deserunt ex, autem, non qui unde? Ut hic quo deleniti?</p>
+        </div>
+
+    </section>
+    <footer>
+        <p id="footer">© Indronil Tarafder, 2021 a Programming Hero Star </p>
+    </footer>
 </body>
 </html>
